[package]
name = "lock"
version = "0.2.0"
authors = ["Mario Fernandez <mario.fernandez@hceris.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
file-lock = "2.1.6"
chrono = "0.4.15"
colored = "2.0.0"
