[package]
name = "lock"
version = "0.2.0"
authors = ["Mario Fernandez <mario.fernandez@hceris.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.14"
file-lock = "1.1.20"
chrono = "0.4.15"
colored = "2.0.0"
